--- a/mikroe_port/.vscode/settings.json
+++ b/mikroe_port/.vscode/settings.json
@@ -25,7 +25,8 @@
         "array": "cpp",
         "initializer_list": "cpp",
         "__string": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "complex": "cpp"
     },
     "particle.firmwareVersion": "5.3.0",
     "particle.targetPlatform": "p2",
