--- a/.gitignore
+++ b/.gitignore
@@ -919,3 +919,6 @@ source/CLICK Libs/RS485 3V3 click/manifest.json
 source/CLICK Libs/RS485 3V3 click/Resources/CHANGELOG.md
 source/CLICK Libs/RS485 3V3 click/Resources/click_icon.png
 source/CLICK Libs/RS485 3V3 click/Resources/DETAILS.md
+mikroe_port/.vscode/tasks.json
+mikroe_port/target/4.0.2/argon/platform_user_ram.ld
+mikroe_port/target/5.3.0/argon/platform_user_ram.ld
