--- a/.gitignore
+++ b/.gitignore
@@ -946,3 +946,11 @@ mikroe_port/lib/.DS_Store
 mikroe_port/target/5.3.0/p2/memory_platform_user.ld
 mikroe_port/target/5.3.0/p2/mikroe_port.bin
 mikroe_port/target/5.3.0/p2/mikroe_port.bin.no_crc
+mikroe_port/target/5.3.0/p2/memory_platform_user.ld
+mikroe_port/target/5.3.0/p2/mikroe_port.bin
+mikroe_port/target/5.3.0/p2/mikroe_port.bin.no_crc
+mikroe_port/target/5.3.0/p2/mikroe_port.dfu
+mikroe_port/target/5.3.0/p2/mikroe_port.elf
+mikroe_port/target/5.3.0/p2/mikroe_port.hex
+mikroe_port/target/5.3.0/p2/mikroe_port.lst
+mikroe_port/target/5.3.0/p2/mikroe_port.map
